--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="systemjs.config.js"></script>
 
 
-    <link rel="stylesheet" href="src/css/app.css">
+    <link rel="stylesheet" href="src/css/main.css">
 
 </head>
 <body>
