Add media section.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="siteCover">
          <h1 class="siteCover__caption">Bustling Daily Life in reading</h1>
         </div>
-          <video  class="siteShow" src="dist/movies/In-And-Out.mp4" autoplay loop></video> 
+          <video  class="siteShow" src="./dist/movies/In-And-Out.mp4" autoplay loop></video> 
       </div>
 
       <div class="panelContainer">
