--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- 2. Configure SystemJS -->
   <script src="systemjs.config.js"></script>
 
-  <link rel="stylesheet" href="src/css/main.css">
+  <link rel="stylesheet" href="dist/styles/css/main.css">
 </head>
 
 <body>
