--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 
 <head>
-    <title>Angular QuickStart</title>
+    <title>A2:Reading Life</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" type="image/png" href="favicon.png" />
+
+    <link rel="stylesheet" href="styles/main.css">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -23,7 +27,7 @@
 </head>
 
 <body>
-    <my-app>Loading application ...</my-app>
+    <div main-app class="l-siteContainer l-header-fixed l-footer-fixed siteContainer">Loading application ...</div>
 </body>
 
 </html>
