--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <artist-app>Loading content now ...</artist-app>
   </body>
 </html>
