--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
   <head>
     <base href="/">
 
-    <title>Angular QuickStart</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Artist Sites</title>
 
-    </script>
+    <meta name="description" content="" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 user-scalable=0" />
+    <meta http-equiv="Content-Language" content="en">
+
   </head>
 
   <body>
