--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,17 @@
   <head>
     <base href="/">
 
-    <title>Angular QuickStart</title>
+    <title>Reading Life</title>
+    <meta name="description">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 user-scalable=0">
+    <meta http-equiv="Content-Language" content="en">
 
-    </script>
   </head>
 
   <body>
     <artist-app>Loading content now ...</artist-app>
   </body>
+
 </html>
